add opacity for outline color

--- a/src/styles/sass/global.sass
+++ b/src/styles/sass/global.sass
@@ -1,6 +1,7 @@
 .outline-show
     outline: solid 1px #000
+    //outline-color: transparent
 
 @function px2Rem($value)
-    $remValue: ($value / 16) + rem 
+    $remValue: ($value / 16) + rem
     @return $remValue
